# surreal_db_awattar_prices

./: .gitignore  Cargo.toml  Dockerfile  README.md
.gitea/workflows/: build.yaml
.github/workflows/: publish-dockerhub.yml
src/: main.rs
src/data/: awattarpricelist.rs  mod.rs
src/messaging/: mod.rs  rabbitbackend.rs
src/persistence/: mod.rs
