[package]
name = "awattar-prices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z" 
lto = true  # Enable link-time optimization.
codegen-units = 1  # Compile the entire crate as a single unit.

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
env_logger = "0.10.0"
exitcode = "1.1.2"
log = "0.4.20"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
surrealdb = "1.0.0"
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
amiquip = { version = "0.4", default-features = false }
serde_json = "1.0"
